# primarydock

./: .gitignore  5grid.php  BZN.sdf  CODE_OUTLINE  GLOSSARY  LICENSE  PREDICTION.md  README.md  SCRIPTING.md  amino_test.G.approved.txt  amino_test.I.approved.txt  amino_test.K.approved.txt  amino_test.P.approved.txt  amino_test.T.approved.txt  amino_test.U.approved.txt  amino_test.V.approved.txt  amino_test.Y.approved.txt  amino_test.approved.txt  amino_test.cpp  amino_tests.bash  aminoacid.cpp  aminoacid.h  aniso_test.approved.txt  aniso_test.cpp  aroma_predict.sh  atom.cpp  atom.h  atom_test.cpp  backbone_test.cpp  constants.h  contributing.md  dbgmetal.sh  intera.cpp  intera.h  jobq_sample  jstat.sh  makefile  metal.cpp  mol_assem_test.approved.txt  mol_assem_test.cpp  (+22 more)
src/: CMakeLists.txt  amino_test.cpp  amino_tests.bash  aminoacid.cpp  aniso_test.cpp  atom_test.cpp  backbone_test.cpp  bond_rotation_test.cpp  cavity_fit.cpp  cavity_search.cpp  couple.cpp  eclipsing_test.cpp  flexion_test.cpp  fyg_activate_or.cpp  group_test_mol.cpp  group_test_res.cpp  histidine_test.cpp  ic.cpp  ic_activate_or.cpp  ic_active_pdb.cpp  interpreter.cpp  loose.cpp  metal.cpp  moiety_test.cpp  mol_assem_test.cpp  mol_test.cpp  molecule_test.cpp  oralign.cpp  pi_stack_test.cpp  podock.cpp  point_test.cpp  primarydock.cpp  primarydock.old.cpp  protein_test.cpp  ramachandran.cpp  ring_test.cpp  ringflip.cpp  score_pdb.cpp  shapeshifter.cpp
src/classes/: CMakeLists.txt  aminoacid.cpp  aminoacid.h  atom.cpp  atom.h  cavity.cpp  cavity.h  conj.cpp  conj.h  constants.h  dynamic.cpp  dynamic.h  glom.cpp  glom.h  group.cpp  group.h  intera.cpp  intera.h  misc.cpp  misc.h  moiety.cpp  moiety.h  molecule.cpp  molecule.h  neighbor.cpp  neighbor.h  point.cpp  point.h  protein.cpp  protein.h  scoring.cpp  scoring.h  search.cpp  search.h
src/test/: ageo_test.cpp  amino_test.cpp  aniso_test.cpp  atom_test.cpp  bond_rotation_test.cpp  cavfit_test.cpp  cavity_test.cpp  cs_test.cpp  eclipse.cpp  flexion_test.cpp  group_test_mol.cpp  group_test_res.cpp  histidine_test.cpp  mcoord_test.cpp  moiety_test.cpp  mol_assem_test.cpp  molecule_test.cpp  pi_stack_test.cpp  point_test.cpp  ring_test.cpp  vdw_vertex_test.cpp
src/tests/: aniso_test.cpp  backbone_test.cpp  bond_rotation_test.cpp  eclipsing_test.cpp  flexion_test.cpp  group_test_mol.cpp  group_test_res.cpp  moiety_test.cpp  molecule_test.cpp  pi_stack_test.cpp  (+3 more)
(+470 files in other folders)
